WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
190646
REGRESSION (
r237075
): webrtc/video-replace-muted-track.html is Crashing
https://bugs.webkit.org/show_bug.cgi?id=190646
Summary
REGRESSION (r237075): webrtc/video-replace-muted-track.html is Crashing
Dawei Fenton (:realdawei)
Reported
2018-10-16 15:21:43 PDT
Created
attachment 352509
[details]
Crash Log webrtc/video-replace-muted-track.html is crashing on almost every run. flakiness dashboard:
https://webkit-test-results.webkit.org/dashboards/flakiness_dashboard.html#tests=webrtc%2Fvideo-replace-muted-track.html
the crash is reproducible with the following recipe run-webkit-tests webrtc/video-replace-muted-track.html --iterations=10
Attachments
Crash Log
(102.55 KB, text/plain)
2018-10-16 15:21 PDT
,
Dawei Fenton (:realdawei)
no flags
Details
Patch
(2.44 KB, patch)
2018-10-17 09:33 PDT
,
youenn fablet
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Dawei Fenton (:realdawei)
Comment 1
2018-10-16 15:55:38 PDT
The frequent crashes appear to have started with
https://trac.webkit.org/changeset/237075/webkit
youenn fablet
Comment 2
2018-10-17 09:33:11 PDT
Created
attachment 352573
[details]
Patch
WebKit Commit Bot
Comment 3
2018-10-17 10:54:07 PDT
Comment on
attachment 352573
[details]
Patch Clearing flags on attachment: 352573 Committed
r237226
: <
https://trac.webkit.org/changeset/237226
>
WebKit Commit Bot
Comment 4
2018-10-17 10:54:08 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 5
2018-10-17 10:55:25 PDT
<
rdar://problem/45343573
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug