REGRESSION (r237075): webrtc/video-replace-muted-track.html is Crashing https://bugs.webkit.org/show_bug.cgi?id=190646

Reviewed by Eric Carlson.

Do not use VCP pixel buffer pool at all.
RealtimeOutgoingVideoSource makes sure to send the frame in the right format.
Tested by ensuring test no longer crashes.

* Source/webrtc/sdk/objc/components/video_codec/RTCVideoEncoderH264.mm:
(-[RTCSingleVideoEncoderH264 resetCompressionSessionIfNeededWithFrame:]):
(-[RTCSingleVideoEncoderH264 resetCompressionSessionWithPixelFormat:]):


Canonical link: https://commits.webkit.org/205597@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@237226 268f45cc-cd09-0410-ab3c-d52691b4dbfc